Fix for Bug 282235 - Gwenview crashes after rotating picture

BUG: 282235
REVIEW: 107680
FIXED-IN: 4.10.0